# word-ai

./: .gitignore  LICENSE  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: prompt.md  settings.local.json
mcp-config/: word-ai-server.json
openspec/changes/archive/2025-02-12-word-ai-editor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/batch-operations/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/desktop-app/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/document-processor/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/mcp-server/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/smart-formatter/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/streaming-handler/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/ui-editor/: spec.md
openspec/changes/archive/2025-02-12-word-ai-editor/specs/version-control/: spec.md
python/: main.py  requirements.txt
python/docx/: __init__.py
python/history/: __init__.py
python/mcp/: __init__.py
python/streaming/: __init__.py
python/word_ai/: __init__.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/editor/: DocumentEditor.css  DocumentEditor.tsx  DocumentView.tsx  MonacoEditor.css  MonacoEditor.tsx  index.ts
src/hooks/: index.ts  useDocument.ts
