[package]
name = "word-ai-editor"
version = "0.1.0"
description = "AI-powered Word document editor"
authors = ["srd19933311042"]
edition = "2021"

[lib]
name = "word_ai_editor"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["shell-open"] }
tauri-plugin-shell = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }
uuid = { version = "1.11", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
